2013-01-12  David Grogan  <dgrogan@chromium.org>

        Unreviewed.  Roll chromium DEPS to 176595.
        https://bugs.webkit.org/show_bug.cgi?id=106730

        * DEPS:

2013-01-11  Dan Beam  <dbeam@chromium.org>

        [clean up] Remove HTMLFormElement::AutocompleteResultError in favor of more specific Error reasons
        https://bugs.webkit.org/show_bug.cgi?id=106610

        Reviewed by Darin Fisher.

        * public/WebFormElement.h: Removed WebFormElement::AutocompleteResultError in favor of more specific error reasons.
        * src/AssertMatchingEnums.cpp: Removed enum value from compile-time asserts.

2013-01-11  Tien-Ren Chen  <trchen@chromium.org>

        WebWidgetClient::didHandleGestureEvent needs to distinguish the case if the event is processed or swallowed
        https://bugs.webkit.org/show_bug.cgi?id=104427

        Reviewed by Adam Barth.

        When a gesture needs to be disambiguated, WebKit doesn't update cursor focus.
        We added an extra status for didHandleGestureEvent(), so we can distinguish
        the case whether the event is actually delivered to the web page or cancelled.

        * public/WebViewClient.h:
        * public/WebWidgetClient.h:
        (WebKit):
        (WebWidgetClient):
        (WebKit::WebWidgetClient::didHandleGestureEvent):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):
        * tests/WebViewTest.cpp:

2013-01-11  Eberhard Graether  <egraether@google.com>

        [chromium] Add ContinuousPainter to call setNeedsDisplay on all layers recursively in continuous painting mode
        https://bugs.webkit.org/show_bug.cgi?id=105458

        Reviewed by James Robinson.

        In continuous painting mode all layers are constantly repainted to allow for life measurements of page paint time,
        while changing HTML and CSS using the WebInspector. This change adds the ContinuousPainter helper object, which